lattests/bad/my_tests/test_no_main.lat
int a(int b, string b) {
    return b;
}

int main2() {
    return 0;
}