lattests/bad/my_tests/test_no_main.err
ERROR

Semantic error at line 1 :
     No 'main' method found.
